--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,3 +1,3 @@
-arb-dir: lib/l10n
-template-arb-file: app_en.arb
-output-localization-file: app_localizations.dart
+arb-dir: lib/l10n # path to l10n files
+template-arb-file: app_en.arb # template file
+output-localization-file: app_localizations.dart # auto-generated files in dart_tool/flutter_gen
